--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "vscode": "^1.0.0"
     },
     "categories": [
-        "Languages"
+        "Languages",
+        "Snippets"
     ],
     "contributes": {
         "languages": [{
@@ -21,6 +22,10 @@
             "language": "exos",
             "scopeName": "text.exos",
             "path": "./syntaxes/exos.tmLanguage"
-        }]
+        }],
+        "snippets": [{
+            "language": "exos",
+            "path": "./snippets/exos.json"
+        }]        
     }
 }
